objects/Question__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>Feed Outbound - DateFormat.</description>
        <formula>MID( TEXT(CreatedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 0, 4) + &quot; &quot;+MID(TEXT(CreatedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefEndPos__c</fullName>
        <description>Feed Outbound - hard code value 0</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DefEndPos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefStartPos__c</fullName>
        <description>Feed Outbound - hardcode value 0.</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DefStartPos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <description>Feed Outbound - hard code value 0.</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsDeleted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>Feed Outbound - Dateformat.</description>
        <formula>MID( TEXT(LastModifiedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 0, 4) + &quot; &quot;+MID(TEXT(LastModifiedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiAnswers__c</fullName>
        <description>Feed Outbound.</description>
        <formula>IF( ISPICKVAL(Type__c, &apos;Multiple Choice&apos;) , &apos;1&apos;, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MultiAnswers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMQuestionID__c</fullName>
        <label>PMQuestionID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuestionToCheck__c</fullName>
        <label>QuestionToCheck</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Multiple Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Alltest</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>1117,1123,1132,1101</value>
        </filters>
        <label>Survey test</label>
    </listViews>
    <nameField>
        <label>QuestionID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>